Resolved a scrolling issue on iOS that was not compatible with the style-free view

--- a/BeyondResponsiveDesign.Menus/styles.css
+++ b/BeyondResponsiveDesign.Menus/styles.css
@@ -139,6 +139,15 @@ article > section > section.content {
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+article > section > section.content > .scrollcontainer {
+  height: 100%;
+}
+article > section > section.content > .scrollcontainer > .wrapper {
+  xmin-height: 100%;
 }
 article > section > section.content > div {
   display: block;
