--- a/BeyondResponsiveDesign.Menus/transforms.less
+++ b/BeyondResponsiveDesign.Menus/transforms.less
@@ -8,31 +8,39 @@
     transition: all @animation-speed ease-in-out;
 }
 
-article > section > section.content > div {
-    .animate;
+article > section > section.content {
 
-    &.slideTab {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+    &.slideTabContainer {
+        height: auto;
+        -webkit-overflow-scrolling: auto;
     }
 
-    &.offRight {
-        -webkit-transform: translate3d(100%,0,0);
-        -moz-transform: translate3d(100%,0,0);
-        -ms-transform: translate3d(100%,0,0);
-        -o-transform: translate3d(100%,0,0);
-        transform: translate3d(100%,0,0);
-    }
+    > div {
+        .animate;
 
-    &.offLeft {
-        -webkit-transform: translate3d(-100%,0,0);
-        -moz-transform: translate3d(-100%,0,0);
-        -ms-transform: translate3d(-100%,0,0);
-        -o-transform: translate3d(-100%,0,0);
-        transform: translate3d(-100%,0,0);
+        &.slideTab {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        &.offRight {
+            -webkit-transform: translate3d(100%,0,0);
+            -moz-transform: translate3d(100%,0,0);
+            -ms-transform: translate3d(100%,0,0);
+            -o-transform: translate3d(100%,0,0);
+            transform: translate3d(100%,0,0);
+        }
+
+        &.offLeft {
+            -webkit-transform: translate3d(-100%,0,0);
+            -moz-transform: translate3d(-100%,0,0);
+            -ms-transform: translate3d(-100%,0,0);
+            -o-transform: translate3d(-100%,0,0);
+            transform: translate3d(-100%,0,0);
+        }
     }
 }
 
